# FaST

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fix_test.cpp  netsimulate.sh
include/: model.h  protocols.h  transformer.h  utils.h
include/SCI/: utils.h
include/SCI/FixedPoint/: bool-data.h  fixed-point.h
include/SCI/GC/: bit.h  halfgate_eva.h  halfgate_gen.h
include/SCI/Utils/: emp-tool.h  group.h  net_io_channel.h  sci_tool.h
include/protocols/: attention.h  bfv-layer-norm.h  bfv-protocol.h  ffn.h  fixed-attention.h  fixed-layer-norm.h  fixed-protocol.h  layer-norm.h  layer-norm2.h  protocol.h
include/utils/: conversion.h  he-bfv.h  he-tools.h  io.h  mat-tools.h  multithread.h  time-count.h
src/: CMakeLists.txt  config.h  module.h  party.h  protocols.h  tools.h  transformer.cpp  transformer.h  utils.h
src/SCI/: CMakeLists.txt
src/SCI/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp
src/SCI/FixedPoint/: CMakeLists.txt  bool-data.cpp  fixed-point.cpp  fp-math.cpp
src/SCI/GC/: CMakeLists.txt  emp-tool.cpp  halfgate_eva.cpp
src/SCI/Math/: CMakeLists.txt
src/SCI/Millionaire/: CMakeLists.txt
src/SCI/NonLinear/: CMakeLists.txt
src/SCI/OT/: CMakeLists.txt
src/SCI/Utils/: CMakeLists.txt
src/protocols/: CMakeLists.txt  attention.cpp  attention.h  bfv-layer-norm.cpp  ffn.cpp  ffn.h  fixed-attention.cpp  fixed-layer-norm.cpp  layer-norm.cpp  layer-norm1.cpp  layer-norm1.h  layer-norm2.cpp  layer-norm2.h
src/tools/: CMakeLists.txt  he-tools.cpp  he-tools.h  mat-tools.cpp  mat-tools.h
src/utils/: CMakeLists.txt  conversion.cpp  group.h  he-bfv.cpp  he-tools.cpp  he-tools.h  io.cpp  io.h  mat-tools.cpp  mat-tools.h  multithread.cpp  time-count.h
test/: BOLT_CP_matmul_test.cpp  CMakeLists.txt  RFCP_matmul_test.cpp  __test.cpp  acc_attn_test.cpp  acc_ffn_test.cpp  acc_layer-norm1_test.cpp  attn_test.cpp  bfv_add_test.cpp  bfv_mul_test.cpp  fixarray_comm_test.cpp  io_test.cpp  mat_test.cpp  opm_test.cpp  pro_attn_test.cpp  pro_ffn_test.cpp  pro_layer-norm1_test.cpp  pro_layer-norm_test.cpp  pro_transformer_test.cpp  seal_parm_test.cpp  test_attn.cpp  test_io.cpp  toy_attn.cpp  toy_sec_trans.cpp
test/accuracy_test/: CMakeLists.txt  acc_attn_test.cpp  acc_ffn_test.cpp  acc_layer-norm_test.cpp  bfv_acc_layer-norm_test.cpp
test/protocols_test/: CMakeLists.txt  pro_bfv_ln_test.cpp  pro_ffn_test.cpp  pro_layer-norm_test.cpp  pro_transformer_test.cpp
